[package]
name = "rdma-sys"
version = "0.1.0"
authors = ["Pu Wang <nicolas.weeks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
memoffset = "0.6"
# intrusive-collections = "0.9"

[build-dependencies]
bindgen = "0.59.1"
pkg-config = "0.3"
